--- a/InvoiceJS/MobInvoice/invoiceself/invoice_list.html
+++ b/InvoiceJS/MobInvoice/invoiceself/invoice_list.html
@@ -52,7 +52,7 @@
 
          <article ng-click="showInvoiceProvince();" ng-show="true" class="sel-box b-tb-style fixed">
              <span class="sel-title">发票所属地：</span>
-             <span class="sel-body sel-city right mr30px"><i>{{bankcharge.currentProvName}}  {{bankcharge.currentCityName}}</i></span>
+             <span class="sel-body sel-city right mr30px"><i>{{invoice.currentProvName}}  {{invoice.currentCityName}}</i></span>
           </article>
 
 
