--- a/InvoiceJS/MobInvoice/invoiceself/invoice_list.html
+++ b/InvoiceJS/MobInvoice/invoiceself/invoice_list.html
@@ -37,14 +37,14 @@
 </article>
 
 <article class="invoice-list fixed" ng-class="{'mb60px':invoiceErrorMsg==''||invoiceErrorMsg==undefined||invoiceErrorMsg==null}" ng-show="chooseCityHidden">
-    <section class="list-head card">
+    <section  ng-class="{'form-control':invoice.NotAllowedChoose}" class="list-head card">
         <em ng-class="{'selected-icon':true,'choose-icon':invoice.cardList.length==invoice.card_invoice.length,
         'uncheck-icon':invoice.cardList.length!=invoice.card_invoice.length}" ng-click="chooseCardAll()"></em>
         <label class="">购卡发票</label>
         <i class="arrow-r"></i>
     </section>
     <ul class="list-body fixed">
-        <li ng-repeat="cardRecord in invoice.card_invoice" ng-click="chooseCard(cardRecord)">
+        <li  ng-class="{'form-control':invoice.NotAllowedChoose}" ng-repeat="cardRecord in invoice.card_invoice" ng-click="chooseCard(cardRecord)">
             <em ng-class="{'selected-icon':true,'choose-icon':cardRecord.choosen,'uncheck-icon':!cardRecord.choosen}"></em>
             <label class="left">{{cardRecord.orderTime}}</label>
             <label class="right mr30px">￥{{cardRecord.showMoney}}</label>
@@ -62,14 +62,14 @@
 </article>
 
 <article class="invoice-list fixed" ng-class="{'mb60px':invoiceErrorMsg==''||invoiceErrorMsg==undefined||invoiceErrorMsg==null}" ng-show="chooseCityHidden">
-    <section class="list-head charge">
+    <section ng-class="{'form-control':invoice.NotAllowedChoose}" class="list-head charge">
         <em ng-class="{'selected-icon':true,'choose-icon':invoice.chargeList.length==invoice.charge_invoice.length,
         'uncheck-icon':invoice.charge_invoice.length!=invoice.card_invoice.length}" ng-click="chooseChargeAll()"></em>
         <label class="">直充发票</label>
         <i class="arrow-r"></i>
     </section>
     <ul class="list-body fixed">
-        <li ng-repeat="chargeRecord in invoice.charge_invoice" ng-click="chooseCharge(chargeRecord)">
+        <li ng-class="{'form-control':invoice.NotAllowedChoose}" ng-repeat="chargeRecord in invoice.charge_invoice" ng-click="chooseCharge(chargeRecord)">
             <em ng-class="{'selected-icon':true,'choose-icon':chargeRecord.choosen,'uncheck-icon':!chargeRecord.choosen}"></em>
             <label class="left">{{chargeRecord.orderTime}}</label>
             <label class="right mr30px">￥{{chargeRecord.showMoney}}</label>
@@ -81,8 +81,8 @@
 
     </ul>
 </article>
-<article class="invoice-list fixed mb60px" ng-show="invoiceErrorMsg!=''&&invoiceErrorMsg!=undefined&&invoiceErrorMsg!=null">
-    <div class="error">{{invoiceErrorMsg}}</div>
+<article class="invoice-list fixed mb60px" ng-show="chooseCityHidden&&invoiceErrorMsg!=''&&invoiceErrorMsg!=undefined&&invoiceErrorMsg!=null">
+    <div class="error" >{{invoiceErrorMsg}}</div>
 </article>
 <article class="submit-area" ng-show="chooseCityHidden">
   <div class="left amount-area">
