--- a/InvoiceJS/MobInvoice/invoiceself/invoice_info.html
+++ b/InvoiceJS/MobInvoice/invoiceself/invoice_info.html
@@ -53,7 +53,7 @@
     </dl>
     <div class="error">{{invoiceErrorMsg}}</div>
     <div class="fixed" ng-show="isShowSave">
-        <a href="javascript:void(0)" class="btn-style left w60 mr2" ng-click="invoiceJudge();">确认并保存</a>
+        <a href="javascript:void(0)" class="btn-style left w60 mr2" ng-click="invoiceJudge();">保存</a>
         <a href="javascript:void(0)" class="delbtn-style left w38" ng-click="invoiceCancelOrDel();">{{invoiceInfo.invoiceDelOrCancelTag}}</a>
     </div>
 </article>
